--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.0.2
+Date: 21. 08. 2022
+  Info:
+    - Increase technology item drop rate.
+---------------------------------------------------------------------------------------------------
 Version: 0.0.1
 Date: 20. 08. 2022
   Info:
